--- a/1.md
+++ b/1.md
@@ -39,7 +39,9 @@
 ![image](https://user-images.githubusercontent.com/107674435/188806985-8992f206-c90f-4c1d-8f4b-c8fc42c54c2f.png)
 
 **Kubernetes Features:**
- 
+
+ ![image](https://user-images.githubusercontent.com/107674435/188808672-e7c8c0f1-d1f8-486b-8ca0-cb7a87cfe361.png)
+
 **Automated Scheduling:** Kubernetes provides advanced scheduler to launch container on cluster nodes based on their resource requirements and other constraints.
 
 **Self Healing Capabilities:** K8 allows to replaces & reschedules containers when nodes die.  Those containers which are failed during the execution process, Kubernetes restarts them automatically. And, those containers which do not reply to the user-defined health check, it stops them from working automatically. It also kills containers that don’t respond to user-defined health check and doesn’t advertise them to clients until they are ready to serve.
@@ -52,15 +54,22 @@
 
 **Persistent Storage:** Kubernetes provides 'persistent storage' for storing the data, which cannot be lost after the pod is killed or rescheduled. Kubernetes supports various storage systems for storing the data, such as Google Compute Engine's Persistent Disks (GCE PD) or Amazon Elastic Block Storage (EBS). It also provides the distributed file systems: NFS or GFS.
 
+**Block Storage (EBS):** It also provides the distributed file systems: NFS or GFS.
+
 **Kubernetes Architecture:**
  
 The architecture of Kubernetes follows the client-server architecture. It consists of the following two main components:
+
+![image](https://user-images.githubusercontent.com/107674435/188808934-d585db20-a95b-4ed4-aa65-2dc637a9ff23.png)
+
 
 •	Master nodes (Control Plane)
 
 •	Worker/Slave nodes
 
 **Master Node:**
+
+![image](https://user-images.githubusercontent.com/107674435/188808996-68ede44e-772c-4a6a-9a78-d56b298a8715.png)
 
 The master node is responsible for the management of Kubernetes cluster. It is mainly the entry point for all administrative tasks. There can be more than one master node in the cluster to check for fault tolerance. The master node has various components like API Server, Controller Manager, Scheduler & ETCD.
  
@@ -74,11 +83,26 @@ The master node is responsible for the management of Kubernetes cluster. It is m
 
 **Worker/Slave node:**
 
+![image](https://user-images.githubusercontent.com/107674435/188809056-41aa5063-06e3-4602-b10b-ff885543ee99.png)
+
 The Worker node in a Kubernetes is also known as minions. A worker node is a physical machine that executes the applications using pods. It contains all the essential services which allow a user to assign the resources to the scheduled containers . The worker node has various components like Docker Container, Kubelet , Kube-proxy, and Pods.
  
 **Docker Container:** Docker runs on each of the worker nodes, and runs the configured pods
+
 **Kubelet:** Kubelet gets the configuration of a Pod from the API server and ensures that the described containers are up and running.
+
 **Kube-proxy:** Kube-proxy acts as a network proxy and a load balancer for a service on a single worker node
+
 **Pods:**  It is the smallest and simplest basic unit of the Kubernetes application. This object indicates the processes which are running in the cluster. A pod is one or more containers that logically run together on nodes.
+
+**Pod:** It is a smallest deployment  unit of the Kubernetes application. This object indicates the processes which are running in the cluster.
+
+**Node:** It is nothing but a single host, which is used to run the virtual or physical machines. A node in the      Kubernetes cluster is also known as a minion.
+
+**Service :** It is a logical set of pods, which works together. With the help of services, users can easily manage load balancing configurations.
+
+**ReplicaSet :**  It is used to identify the particular number of pod replicas are running at a given time. It replaces the replication controller because it is more powerful and allows a user to use the "set-based" label selector.
+
+**Namespace:**   It supports various virtual clusters, which are known as namespaces. It is a way of dividing the cluster resources between two or more users.
 
 
